[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cloakbrowser"
version = "0.2.0"
description = "MCP server for CloakBrowser - stealth browser automation via Model Context Protocol"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "MiwooMiwoo" }]
keywords = ["mcp", "cloakbrowser", "browser", "automation", "stealth", "anti-detect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "cloakbrowser>=0.3.0",
    "mcp>=1.0.0",
]

[project.scripts]
cloakbrowser-mcp = "cloakbrowser_mcp.server:run"

[project.urls]
Homepage = "https://github.com/MiwooMiwoo/cloakbrowser-mcp"
Repository = "https://github.com/MiwooMiwoo/cloakbrowser-mcp"
Issues = "https://github.com/MiwooMiwoo/cloakbrowser-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cloakbrowser_mcp"]
